--- a/environment.yml
+++ b/environment.yml
@@ -3,20 +3,20 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - ipython=7.16.1=py38h5ca1d4c_0
-  - ipywidgets=7.5.1=py_0
-  - nodejs=10.13.0=0
-  - notebook=6.0.3=py38_0
-  - numpy=1.19.1=py38h5510c5b_0
-  - numpy-base=1.19.1=py38ha3acd2a_0
-  - python=3.8.5=he1778fa_0
-  - widgetsnbextension=3.5.1=py38_0
-  - conda=4.8.3=py38_0
-  - conda-build=3.18.11=py38_1
-  - conda-env=2.6.0=1
-  - conda-package-handling=1.6.1=py38h62dcd97_0
-  - conda-verify=3.4.2=py_1
-  - pip=20.1.1=py38_1
+  - ipython=7.16.1
+  - ipywidgets=7.5.1
+  - nodejs=10.13.0
+  - notebook=6.0.3
+  - numpy=1.19.1
+  - numpy-base=1.19.1
+  - python=3.8.5
+  - widgetsnbextension=3.5.1
+  - conda=4.8.3
+  - conda-build=3.18.11
+  - conda-env=2.6.0
+  - conda-package-handling=1.6.1
+  - conda-verify=3.4.2
+  - pip=20.1.1
   - pip:
     - bqplot==0.11.0
     - matplotlib==3.3.0
